--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   equatable: ^2.0.5
   bloc_test: ^9.1.5
+  firebase_core: ^2.24.1
 
 dev_dependencies:
   flutter_test:
